add/delete saved stories for a user, swagger
